# STM_HAL

STM32H7/: CMakeLists.txt
STM32H7/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
STM32H7/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_conf.h
